argocd/kind/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-tracker-service
  namespace: student-tracker
spec:
  selector:
    app: student-tracker
  ports:
    - protocol: TCP
      port: 80           # Exposed to Ingress
      targetPort: 8011   # Actual container/app port
