argocd/kind/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-tracker-ingress
  namespace: student-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ec2-3-80-98-218.eu-west-1.compute.amazonaws.com  # ✅ Updated to new public IP DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-tracker-service
                port:
                  number: 80
